--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.1",
     "angular-spotify": "^1.5.1",
     "bootstrap": "^4.5.0",
+    "node-modules": "^1.0.1",
     "rxjs": "~6.5.4",
     "spotify-web-api-node": "^4.0.0",
     "tslib": "^1.10.0",
